# rust-refs

axum_todos_api/: Cargo.toml
axum_todos_api/src/: main.rs
http_get_parser/public/: about.html  index.html
http_get_parser/src/: main.rs  server.rs  website_handler.rs
http_get_parser/src/http/: mod.rs  request.rs  response.rs
learn-to-code-with-rust/: .gitignore
learn-to-code-with-rust/closures/src/: main.rs
learn-to-code-with-rust/control-flow/src/: main.rs
learn-to-code-with-rust/data-types/src/: main.rs
learn-to-code-with-rust/datetimes/: Cargo.toml
learn-to-code-with-rust/datetimes/src/: main.rs
learn-to-code-with-rust/enums/src/: main.rs
learn-to-code-with-rust/error-handling/: test.txt
learn-to-code-with-rust/error-handling/src/: main.rs
learn-to-code-with-rust/fitness/src/: lib.rs
learn-to-code-with-rust/functions/src/: main.rs
learn-to-code-with-rust/generics/src/: main.rs
learn-to-code-with-rust/hash-maps/src/: main.rs
learn-to-code-with-rust/iterators/src/: coding_challenge.rs  main.rs
learn-to-code-with-rust/lifetimes/src/: main.rs
learn-to-code-with-rust/option-and-result-enums/src/: main.rs
learn-to-code-with-rust/ownership/src/: coding_challenge_2.rs  main.rs
learn-to-code-with-rust/random/src/: main.rs
learn-to-code-with-rust/regular-expressions/: Cargo.toml
mars_calc_cli/src/: main.rs
sqlite-examples/: Cargo.toml  _db.db
sqlite-examples/examples/: c01-simple.rs  c02-join.rs  c03-values.rs  c04-json.rs  c05-jsonb.rs  c06-async.rs
sqlite-examples/src/: db_utils.rs  lib.rs
(+10 files in other folders)
